// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextFieldWrapper snapshots should click and open popover 1`] = `
<DocumentFragment>
  <div
    class="css-1jnxvbp TextFieldWrapper TextFieldWrapper--filled TextFieldWrapper--chip"
    data-test-text-field-wrapper="text-field"
  >
    <input
      class="TextFieldWrapper__input"
      data-test-text-field-input="text-field"
      maxlength="6"
      value="value"
    />
    <div
      class="css-zcp5dz TextFieldPopover"
      data-test-box=""
    >
      <div
        class="css-1jnxvbp TextFieldPopover__icon TextFieldWrapper__icon Icon Icon--clickable"
        data-test-icon="detached"
        height="12"
        name="Detached"
        width="12"
      />
      <div
        class="css-6i6anv Popover Popover--selected"
        data-test-box=""
        data-test-popover="popover"
        style="left: 0px; top: 0px;"
      >
        <div
          class="css-3q7iqb"
          data-test-box=""
        />
      </div>
    </div>
    <div
      class="css-1jnxvbp Chip TextFieldWrapper__chip TextFieldWrapper__chip--attached-value TextFieldChip"
      data-test-chip=""
    >
      auto
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextFieldWrapper snapshots should click on input 1`] = `
<DocumentFragment>
  <div
    class="css-1jnxvbp TextFieldWrapper TextFieldWrapper--filled"
    data-test-text-field-wrapper="text-field"
  >
    <input
      class="TextFieldWrapper__input"
      data-test-text-field-input="text-field"
      maxlength="6"
    />
  </div>
</DocumentFragment>
`;

exports[`TextFieldWrapper snapshots should render TextFieldWrapper 1`] = `
<DocumentFragment>
  <div
    class="css-1jnxvbp TextFieldWrapper TextFieldWrapper--filled"
    data-test-text-field-wrapper="text-field"
  >
    <input
      class="TextFieldWrapper__input"
      data-test-text-field-input="text-field"
      maxlength="6"
    />
  </div>
</DocumentFragment>
`;

exports[`TextFieldWrapper snapshots should render with chip 1`] = `
<DocumentFragment>
  <div
    class="css-1jnxvbp TextFieldWrapper TextFieldWrapper--filled TextFieldWrapper--chip"
    data-test-text-field-wrapper="text-field"
  >
    <input
      class="TextFieldWrapper__input"
      data-test-text-field-input="text-field"
      maxlength="6"
      value="value"
    />
    <div
      class="css-1jnxvbp Chip TextFieldWrapper__chip TextFieldWrapper__chip--attached-value TextFieldChip"
      data-test-chip=""
    >
      auto
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextFieldWrapper snapshots should render with popover 1`] = `
<DocumentFragment>
  <div
    class="css-1jnxvbp TextFieldWrapper TextFieldWrapper--filled"
    data-test-text-field-wrapper="text-field"
  >
    <input
      class="TextFieldWrapper__input"
      data-test-text-field-input="text-field"
      maxlength="6"
    />
    <div
      class="css-zcp5dz TextFieldPopover"
      data-test-box=""
    >
      <div
        class="css-1jnxvbp TextFieldPopover__icon TextFieldWrapper__icon Icon Icon--clickable"
        data-test-icon="variant"
        height="12"
        name="Variant"
        width="12"
      />
      <div
        class="css-6i6anv Popover"
        data-test-box=""
        data-test-popover="popover"
        style="left: 0px; top: 0px;"
      >
        <div
          class="css-3q7iqb"
          data-test-box=""
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;
